<resources>
    <string name="app_name">Flight</string>
    <string name="login_email">Email :</string>
    <string name="login_password">Password :</string>
    <string name="title_activity_principal_menu">PrincipalMenu</string>
    <string name="title_search">Search</string>
    <string name="title_my_flight">My Flight</string>
    <string name="title_profile">Profile</string>
    <string name="title_register">Register</string>
    <string name="title_edit">Edit info</string>
    <string name="tab_1">Search</string>
    <string name="tab_2">My Flight</string>
    <string name="tab_3">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="origin">Origin</string>
    <string name="destiny">Destiny</string>
    <string name="departure_date">Departure date</string>
    <string name="return_date">Arrival date</string>
    <string name="one_way">one way</string>
    <string name="search_flight">Search flight</string>
    <string name="logout_text">You have not logged in?</string>
    <string name="logout_question_text">Do we start? </string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="edit_user">Edit</string>
    <string name="delete_user">Delete</string>
    <string name="name_user">Name</string>
    <string name="last_name_user">Lastname</string>
    <string name="dni_user">DNI</string>
    <string name="telephone_user">Telephone</string>
    <string name="email_user">Email</string>
    <string name="login_button">login</string>
    <string name="register_button">Register</string>
    <string name="register_text_login">Don\'t have an account?</string>
    <string name="register2_text_login">Sign up here</string>
    <string name="register_accept_button">register</string>
    <string name="configuration_button_menu">Configuration</string>
    <string name="information_button_menu">About</string>
    <string name="update_data_user_button">update</string>
    <string name="logout_button">Log out</string>
    <string name="name_register">Name</string>
    <string name="lastname_register">Lastname</string>
    <string name="dni_register">Dni</string>
    <string name="phone_register">Telephone</string>
    <string name="email_register">Email</string>
    <string name="password_register">Password</string>
    <string name="origin_my_flight">Origin</string>
    <string name="change_language">Change language :</string>
    <string name="english_language">English</string>
    <string name="spanish_languaje">Spanish</string>

    <string-array name="brew_array">
        <item>Madrid</item>
        <item>Canarias</item>
        <item>Lisboa</item>
        <item>Oporto</item>
    </string-array>


</resources>
