<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:theme="@style/AppTheme">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:text="@string/title_profile"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_vertical_margin"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/text_vertical_margin"
                    android:layout_marginBottom="@dimen/text_vertical_margin"
                    android:text="@string/name_user" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/text_horizontal_margin"
                    android:layout_marginBottom="@dimen/text_vertical_margin"
                    android:text="@string/last_name_user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/text_horizontal_margin"
                    android:layout_marginBottom="@dimen/text_vertical_margin"
                    android:text="@string/dni_user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/text_horizontal_margin"
                    android:layout_marginBottom="@dimen/text_vertical_margin"
                    android:text="@string/telephone_user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/text_horizontal_margin"
                    android:layout_marginBottom="@dimen/text_vertical_margin"
                    android:text="@string/email_user" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_text_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_vertical_margin"
                    android:text="a" />

                <TextView
                    android:id="@+id/lastname_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_vertical_margin"
                    android:text="DSF" />

                <TextView
                    android:id="@+id/dni_text_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_vertical_margin"
                    android:text="DFHGDFGHDFHG" />

                <TextView
                    android:id="@+id/phone_text_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_vertical_margin"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/email_text_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_vertical_margin"
                    android:text="TextView" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_horizontal_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_button"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_vertical_margin"
                android:text="@string/edit_user" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_user" />
        </LinearLayout>

        <Button
            android:id="@+id/logout_button"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/logout_button" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu" >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>